[gd_scene load_steps=10 format=3 uid="uid://l2g7ascr4l50"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_61n4t"]
[ext_resource type="PackedScene" uid="uid://biqpoxia0rju0" path="res://scenes/player.tscn" id="1_hokrh"]
[ext_resource type="PackedScene" uid="uid://b63ue60xe4mw1" path="res://scenes/level_3.tscn" id="2_h1khy"]
[ext_resource type="PackedScene" uid="uid://kcqcphadkh11" path="res://scenes/bg.tscn" id="2_tftev"]
[ext_resource type="PackedScene" uid="uid://dw543b115pxyr" path="res://scenes/start_zone.tscn" id="4_rsj57"]
[ext_resource type="PackedScene" uid="uid://n45hhju53jo1" path="res://scenes/exit.tscn" id="5_mi37t"]
[ext_resource type="PackedScene" uid="uid://chw1b5bi5lm8x" path="res://scenes/tile_map.tscn" id="6_rq1ot"]
[ext_resource type="PackedScene" uid="uid://dekapcmq0iaqj" path="res://scenes/deathzone.tscn" id="7_oabem"]
[ext_resource type="PackedScene" uid="uid://b2vun15qoujat" path="res://scenes/ui_layer.tscn" id="9_ugkej"]

[node name="Level_2" type="Node2D"]
script = ExtResource("1_61n4t")
next_level = ExtResource("2_h1khy")

[node name="BG" parent="." instance=ExtResource("2_tftev")]

[node name="StartZone" parent="." instance=ExtResource("4_rsj57")]
position = Vector2(68, 160)

[node name="Exit" parent="." instance=ExtResource("5_mi37t")]
position = Vector2(250, 160)

[node name="TileMap" parent="." instance=ExtResource("6_rq1ot")]
layer_0/tile_data = PackedInt32Array(917544, 524288, 2, 852008, 524288, 1, 786472, 524288, 1, 720936, 524288, 1, 655400, 524288, 0, 917543, 458752, 2, 852007, 458752, 1, 786471, 458752, 1, 720935, 458752, 1, 655399, 458752, 0, 917542, 458752, 2, 852006, 458752, 1, 786470, 458752, 1, 720934, 458752, 1, 655398, 458752, 0, 917541, 458752, 2, 852005, 458752, 1, 786469, 458752, 1, 720933, 458752, 1, 655397, 458752, 0, 917540, 458752, 2, 852004, 458752, 1, 786468, 458752, 1, 720932, 458752, 1, 655396, 458752, 0, 917539, 458752, 2, 852003, 458752, 1, 786467, 458752, 1, 720931, 458752, 1, 655395, 458752, 0, 917538, 458752, 2, 852002, 458752, 1, 786466, 458752, 1, 720930, 458752, 1, 655394, 458752, 0, 917537, 458752, 2, 852001, 458752, 1, 786465, 458752, 1, 720929, 458752, 1, 655393, 458752, 0, 917536, 458752, 2, 852000, 458752, 1, 786464, 458752, 1, 720928, 458752, 1, 655392, 458752, 0, 917535, 458752, 2, 851999, 458752, 1, 786463, 458752, 1, 720927, 458752, 1, 655391, 458752, 0, 917534, 458752, 2, 851998, 458752, 1, 786462, 458752, 1, 720926, 458752, 1, 655390, 458752, 0, 917533, 458752, 2, 851997, 458752, 1, 786461, 458752, 1, 720925, 458752, 1, 655389, 458752, 0, 917532, 458752, 2, 851996, 458752, 1, 786460, 458752, 1, 720924, 458752, 1, 655388, 458752, 0, 917531, 458752, 2, 851995, 458752, 1, 786459, 458752, 1, 720923, 458752, 1, 655387, 458752, 0, 917530, 458752, 2, 851994, 458752, 1, 786458, 458752, 1, 720922, 458752, 1, 655386, 458752, 0, 917529, 458752, 2, 851993, 458752, 1, 786457, 458752, 1, 720921, 458752, 1, 655385, 458752, 0, 917528, 458752, 2, 851992, 458752, 1, 786456, 458752, 1, 720920, 458752, 1, 655384, 458752, 0, 917527, 458752, 2, 851991, 458752, 1, 786455, 458752, 1, 720919, 458752, 1, 655383, 458752, 0, 917526, 458752, 2, 851990, 458752, 1, 786454, 458752, 1, 720918, 458752, 1, 655382, 458752, 0, 917525, 458752, 2, 851989, 458752, 1, 786453, 458752, 1, 720917, 458752, 1, 655381, 458752, 0, 917524, 458752, 2, 851988, 458752, 1, 786452, 458752, 1, 720916, 458752, 1, 655380, 458752, 0, 917523, 458752, 2, 851987, 458752, 1, 786451, 458752, 1, 720915, 458752, 1, 655379, 458752, 0, 917522, 458752, 2, 851986, 458752, 1, 786450, 458752, 1, 720914, 458752, 1, 655378, 458752, 0, 917521, 458752, 2, 851985, 458752, 1, 786449, 458752, 1, 720913, 458752, 1, 655377, 458752, 0, 917520, 458752, 2, 851984, 458752, 1, 786448, 458752, 1, 720912, 458752, 1, 655376, 458752, 0, 917519, 458752, 2, 851983, 458752, 1, 786447, 458752, 1, 720911, 458752, 1, 655375, 458752, 0, 917518, 458752, 2, 851982, 458752, 1, 786446, 458752, 1, 720910, 458752, 1, 655374, 458752, 0, 917517, 458752, 2, 851981, 458752, 1, 786445, 458752, 1, 720909, 458752, 1, 655373, 458752, 0, 917516, 458752, 2, 851980, 458752, 1, 786444, 458752, 1, 720908, 458752, 1, 655372, 458752, 0, 917515, 458752, 2, 851979, 458752, 1, 786443, 458752, 1, 720907, 458752, 1, 655371, 458752, 0, 917514, 458752, 2, 851978, 458752, 1, 786442, 458752, 1, 720906, 458752, 1, 655370, 458752, 0, 917513, 458752, 2, 851977, 458752, 1, 786441, 458752, 1, 720905, 458752, 1, 655369, 458752, 0, 917512, 458752, 2, 851976, 458752, 1, 786440, 458752, 1, 720904, 458752, 1, 655368, 458752, 0, 917511, 458752, 2, 851975, 458752, 1, 786439, 458752, 1, 720903, 458752, 1, 655367, 458752, 0, 917510, 458752, 2, 851974, 458752, 1, 786438, 458752, 1, 720902, 458752, 1, 655366, 458752, 0, 917509, 458752, 2, 851973, 458752, 1, 786437, 458752, 1, 720901, 458752, 1, 655365, 458752, 0, 917508, 458752, 2, 851972, 458752, 1, 786436, 458752, 1, 720900, 458752, 1, 655364, 458752, 0, 917507, 458752, 2, 851971, 458752, 1, 786435, 458752, 1, 720899, 458752, 1, 655363, 458752, 0, 917506, 458752, 2, 851970, 458752, 1, 786434, 458752, 1, 720898, 458752, 1, 655362, 458752, 0, 917505, 458752, 2, 851969, 458752, 1, 786433, 458752, 1, 720897, 458752, 1, 655361, 458752, 0, 917504, 458752, 2, 851968, 458752, 1, 786432, 458752, 1, 720896, 458752, 1, 655360, 458752, 0, 983039, 458752, 2, 917503, 458752, 1, 851967, 458752, 1, 786431, 458752, 1, 720895, 458752, 0, 983038, 458752, 2, 917502, 458752, 1, 851966, 458752, 1, 786430, 458752, 1, 720894, 458752, 0, 983037, 458752, 2, 917501, 458752, 1, 851965, 458752, 1, 786429, 458752, 1, 720893, 458752, 0, 983036, 393216, 2, 917500, 393216, 1, 851964, 393216, 1, 786428, 393216, 1, 720892, 393216, 0)

[node name="Deathzone" parent="." instance=ExtResource("7_oabem")]

[node name="Player" parent="." instance=ExtResource("1_hokrh")]
position = Vector2(78, 126)

[node name="Objects" type="Node2D" parent="."]

[node name="Traps" type="Node2D" parent="."]

[node name="UI_Layer" parent="." instance=ExtResource("9_ugkej")]
